8375668: Compiler warning implicit-const-int-float-conversion by clang23

Reviewed-by: dholmes, cnorrbin